@@ -17,19 +17,19 @@ import net.minecraft.text.TranslatableText;
 import java.util.List;
 
 public class BooleanConfigOption extends ConfigOption<Boolean> {
-    private static final List<Boolean> BOOLEAN_VALUES = ImmutableList.of(Boolean.TRUE, Boolean.FALSE);
-    private final String translationKey;
-    private final boolean defaultValue;
-    private final Text enabledText;
-    private final Text disabledText;
-    private List<OrderedText> tooltips = List.of();
+    public static final List<Boolean> BOOLEAN_VALUES = ImmutableList.of(Boolean.TRUE, Boolean.FALSE);
+    public final String translationKey;
+    public final boolean defaultValue;
+    public final Text enabledText;
+    public final Text disabledText;
+    public List<OrderedText> tooltips = List.of();
 
-    public BooleanConfigOption(String modId, String key, boolean defaultValue, String enabledKey, String disabledKey, List<OrderedText> tooltips) {
-        this(modId, key, defaultValue, enabledKey, disabledKey);
+    public BooleanConfigOption(String modId, String key, boolean defaultValue, String enabledKey, String disabledKey, AccessType accessType, List<OrderedText> tooltips) {
+        this(modId, key, defaultValue, enabledKey, disabledKey, accessType);
         this.tooltips = tooltips;
     }
-    public BooleanConfigOption(String modId, String key, boolean defaultValue, String enabledKey, String disabledKey) {
-        super(modId, key);
+    public BooleanConfigOption(String modId, String key, boolean defaultValue, String enabledKey, String disabledKey, AccessType accessType) {
+        super(modId, key, accessType);
         ConfigOptionStorage.setBoolean(key, defaultValue);
         this.type = Type.BOOL;
         this.translationKey = "option." + modId + "." + key;
@@ -38,13 +38,13 @@ public class BooleanConfigOption extends ConfigOption<Boolean> {
         this.disabledText = new TranslatableText(translationKey + "." + disabledKey);
     }
 
-    public BooleanConfigOption(String modId, String key, boolean defaultValue, List<OrderedText> tooltips) {
-        this(modId, key, defaultValue);
+    public BooleanConfigOption(String modId, String key, boolean defaultValue, AccessType accessType, List<OrderedText> tooltips) {
+        this(modId, key, defaultValue, accessType);
         this.tooltips = tooltips;
     }
 
-    public BooleanConfigOption(String modId, String key, boolean defaultValue) {
-        this(modId, key, defaultValue, "true", "false");
+    public BooleanConfigOption(String modId, String key, boolean defaultValue, AccessType accessType) {
+        this(modId, key, defaultValue, "true", "false", accessType);
     }
 
     public void setValue(Boolean value) {
@@ -71,12 +71,14 @@ public class BooleanConfigOption extends ConfigOption<Boolean> {
         return ScreenTexts.composeGenericOptionText(new TranslatableText(translationKey), getValue() ? enabledText : disabledText);
     }
 
+    public List<OrderedText> getTooltip() { return this.tooltips; }
+
     @Environment(EnvType.CLIENT)
     public ClickableWidget createButton(int x, int y, int width) {
         CyclingButtonWidget.TooltipFactory<Boolean> tooltipFactory = value -> tooltips;
         return (new CyclingButtonWidget.Builder<Boolean>(value -> value ? this.enabledText : this.disabledText).values(BOOLEAN_VALUES)
-                .tooltip(tooltipFactory).initially(this.getValue())
-                .build(x, y, width, 20, new TranslatableText(this.translationKey), ((button, value) -> ConfigOptionStorage.setBoolean(this.getKey(), value))));
+                .tooltip(tooltipFactory)).initially(this.getValue())
+                .build(x, y, width, 20, new TranslatableText(this.translationKey), ((button, value) -> ConfigOptionStorage.setBoolean(this.getKey(), value)));
     }
 
     @Environment(EnvType.CLIENT)
